--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,148 @@
             <div>
                 <h1>Peace be upon you.</h1>
             </div>
-        </section>
+            <P>This is just regular text</P>
+            <a href="">This is a URL anchor tag</a>
+            <button>This is a button</button>
+            <section class="flex">
+                <div class="container card">
+                    <div class="accent-tab padding2"></div>
+                    <div class="flex column padding3">
+                        <h2>Java</h2>
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48"
+                            viewBox="0 0 48 48">
+                            <path fill="#F44336"
+                                d="M23.65,24.898c-0.998-1.609-1.722-2.943-2.725-5.455C19.229,15.2,31.24,11.366,26.37,3.999c2.111,5.089-7.577,8.235-8.477,12.473C17.07,20.37,23.645,24.898,23.65,24.898z">
+                            </path>
+                            <path fill="#F44336"
+                                d="M23.878,17.27c-0.192,2.516,2.229,3.857,2.299,5.695c0.056,1.496-1.447,2.743-1.447,2.743s2.728-0.536,3.579-2.818c0.945-2.534-1.834-4.269-1.548-6.298c0.267-1.938,6.031-5.543,6.031-5.543S24.311,11.611,23.878,17.27z">
+                            </path>
+                            <g>
+                                <path fill="#1565C0"
+                                    d="M32.084 25.055c1.754-.394 3.233.723 3.233 2.01 0 2.901-4.021 5.643-4.021 5.643s6.225-.742 6.225-5.505C37.521 24.053 34.464 23.266 32.084 25.055zM29.129 27.395c0 0 1.941-1.383 2.458-1.902-4.763 1.011-15.638 1.147-15.638.269 0-.809 3.507-1.638 3.507-1.638s-7.773-.112-7.773 2.181C11.683 28.695 21.858 28.866 29.129 27.395z">
+                                </path>
+                                <path fill="#1565C0"
+                                    d="M27.935,29.571c-4.509,1.499-12.814,1.02-10.354-0.993c-1.198,0-2.974,0.963-2.974,1.889c0,1.857,8.982,3.291,15.63,0.572L27.935,29.571z">
+                                </path>
+                                <path fill="#1565C0"
+                                    d="M18.686,32.739c-1.636,0-2.695,1.054-2.695,1.822c0,2.391,9.76,2.632,13.627,0.205l-2.458-1.632C24.271,34.404,17.014,34.579,18.686,32.739z">
+                                </path>
+                                <path fill="#1565C0"
+                                    d="M36.281,36.632c0-0.936-1.055-1.377-1.433-1.588c2.228,5.373-22.317,4.956-22.317,1.784c0-0.721,1.807-1.427,3.477-1.093l-1.42-0.839C11.26,34.374,9,35.837,9,37.017C9,42.52,36.281,42.255,36.281,36.632z">
+                                </path>
+                                <path fill="#1565C0"
+                                    d="M39,38.604c-4.146,4.095-14.659,5.587-25.231,3.057C24.341,46.164,38.95,43.628,39,38.604z">
+                                </path>
+                            </g>
+                        </svg>
+                        <div class="padding2">
+                            <ul>
+                                <li>Talking point 1</li>
+                                <li>Talking point 2</li>
+                                <li>Talking point 3</li>
+                            </ul>
+                        </div>
+                        <progress value="3" max="5"></progress>
+
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="accent-tab padding2"></div>
+                    <div class="flex column padding3">
+                        <h2>Ruby</h2>
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48"
+                            viewBox="0 0 48 48">
+                            <path fill="#9B1010" d="M42 14L40 40 14 42z"></path>
+                            <path fill="#B71C1C" d="M28 28L40 40 42 14z"></path>
+                            <path fill="#C62828"
+                                d="M24 12.336A22.621 11.664 0 1 0 24 35.664A22.621 11.664 0 1 0 24 12.336Z"
+                                transform="rotate(-45.001 24 24)"></path>
+                            <path fill="#E53935" d="M10 17L17 10 25 6 31 10 28 19 19 27 10 30 6 24z"></path>
+                            <path fill="#FF5252"
+                                d="M31,10l-6-4h11L31,10z M42,15l-11-5l-3,9L42,15z M19,27l13.235,5.235L28,19L19,27z M10,30l4,12l5-15L10,30z M6,24v11l4-5L6,24z">
+                            </path>
+                        </svg>
+                        <div class="padding2">
+                            <ul>
+                                <li>Talking point 1</li>
+                                <li>Talking point 2</li>
+                                <li>Talking point 3</li>
+                            </ul>
+                        </div>
+                        <progress value="1" max="5"></progress>
+
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="accent-tab padding2"></div>
+                    <div class="flex column padding3">
+                        <h2>TypeScript</h2>
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48"
+                            viewBox="0 0 48 48">
+                            <rect width="36" height="36" x="6" y="6" fill="#1976d2"></rect>
+                            <polygon fill="#fff"
+                                points="27.49,22 14.227,22 14.227,25.264 18.984,25.264 18.984,40 22.753,40 22.753,25.264 27.49,25.264">
+                            </polygon>
+                            <path fill="#fff"
+                                d="M39.194,26.084c0,0-1.787-1.192-3.807-1.192s-2.747,0.96-2.747,1.986 c0,2.648,7.381,2.383,7.381,7.712c0,8.209-11.254,4.568-11.254,4.568V35.22c0,0,2.152,1.622,4.733,1.622s2.483-1.688,2.483-1.92 c0-2.449-7.315-2.449-7.315-7.878c0-7.381,10.658-4.469,10.658-4.469L39.194,26.084z">
+                            </path>
+                        </svg>
+                        <div class="padding2">
+                            <ul>
+                                <li>Talking point 1</li>
+                                <li>Talking point 2</li>
+                                <li>Talking point 3</li>
+                            </ul>
+                        </div>
+                        <progress value="4" max="5"></progress>
+
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <section>
+                    <h2>/ Project name</h2>
+                    <div class="flex">
+                        <img class="margin3"
+                            src="https://images.unsplash.com/photo-1741806914386-c60073a0fed3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="project img">
+                        <div class="container column">
+                            <ul>
+                                <li>Suuup</li>
+                                <li>Saved the world, 6 times.</li>
+                                <li>Eat cheese</li>
+                            </ul>
+                            <p>
+                                White sand stretches endlessly, shimmering under the warm sun. Its fine grains feel cool
+                                and
+                                soft beneath your feet. Gentle breezes carry the scent of salt and sea. The tranquil
+                                beauty
+                                invites peaceful reflection and relaxation.
+                            </p>
+                            <button class="margin3">Learn more</button>
+                        </div>
+                    </div>
+                </section>
+                <section class="padding2 container card">
+                    <h2>/ Rewilding</h2>
+                    <div class="flex">
+                        <img class="margin3"
+                            src="https://images.unsplash.com/photo-1747985323857-5c1c16b2ac47?q=80&w=2650&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="project img">
+                        <div class="container column">
+                            <ul>
+                                <li>Replanted the entire mountain using Elixir and Java.</li>
+                                <li>Made cars run on Dependency Injection.</li>
+                                <li>Remade Dijstra's algorithm but no longer greedy.</li>
+                            </ul>
+                            <button class="margin3">Learn more</button>
+                        </div>
+                    </div>
+                </section>
+
+            </section>
+
     </main>
 
 </body>
