add outline btn

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             </div>
             <P>This is just regular text</P>
             <a href="">This is a URL anchor tag</a>
-            <button>This is a button</button>
+            <button>Normal button</button>
+            <button class="outline-btn">This is outline btn</button>
             <section class="flex">
                 <div class="container card top-accent-tab">
                     <!-- <div class="accent-tab padding2"></div> -->
