--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <a href="">This is a URL anchor tag</a>
             <button>Normal button</button>
             <button class="outline-btn">This is outline btn</button>
+
             <section id="Skills" class="flex">
                 <div class="container card top-accent-tab">
-                    <!-- <div class="accent-tab padding2"></div> -->
                     <div class="flex column padding3">
                         <h2>Java</h2>
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48"
@@ -129,11 +129,9 @@
                             </ul>
                         </div>
                         <progress value="3" max="5"></progress>
-
                     </div>
                 </div>
-                <div class="container">
-                    <div class="accent-tab padding2"></div>
+                <div class="container card top-accent-tab">
                     <div class="flex column padding3">
                         <h2>Ruby</h2>
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48"
@@ -159,8 +157,7 @@
 
                     </div>
                 </div>
-                <div class="container">
-                    <div class="accent-tab padding2"></div>
+                <div class="container card top-accent-tab">
                     <div class="flex column padding3">
                         <h2>TypeScript</h2>
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48"
